--- a/README
+++ b/README
@@ -1,1 +1,37 @@
 PBS Parser
+==========
+
+This is a library for dealing with PBS aka. Nets.eu 'BetalingsService' (Danish Direct Debit service). This service functions by exchanging files in deliveries, either through a webinterface or a SFTP connection or by other means. This library is designed to deal with those files, both parsing incoming files and generating outgoing files.
+
+The library is mostly incomplete, and likely to stay that way, as I only have a real-world use for a certain subset of it. If you need it to do something else/more, please to get in touch. 
+
+The library is licensed under the FreeBSD license, which allows you to do pretty much whatever you want. I'd appreciate to hear from anyone using this, though.
+
+License
+-------
+
+Copyright 2010 Martin Seebach. All rights reserved.
+
+Redistribution and use in source and binary forms, with or without modification, are
+permitted provided that the following conditions are met:
+
+   1. Redistributions of source code must retain the above copyright notice, this list of
+      conditions and the following disclaimer.
+
+   2. Redistributions in binary form must reproduce the above copyright notice, this list
+      of conditions and the following disclaimer in the documentation and/or other materials
+      provided with the distribution.
+
+THIS SOFTWARE IS PROVIDED BY MARTIN SEEBACH ``AS IS'' AND ANY EXPRESS OR IMPLIED
+WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
+FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL MARTIN SEEBACH OR
+CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
+ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+The views and conclusions contained in the software and documentation are those of the
+authors and should not be interpreted as representing official policies, either expressed
+or implied, of Martin Seebach.
